--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,14 +2,13 @@
 <div class="clear"></div>
 <!-- start Main Wrapper -->
 <div class="main-wrapper scrollspy-container">
+  <% if notice %>
+    <p class="alert alert-notice"><%= notice %></p>
+  <% elsif alert %>
+    <p class="alert alert-error"><%= alert %></p>
+  <% end %>
   <!-- start end Page title -->
   <div class="page-title" style="background-image:url('/assets/my_room.jpeg');">
-          <% if notice %>
-          <p class="alert alert-notice"><%= notice %></p>
-        <% end %>
-        <% if alert %>
-         <p class="alert alert-error"><%= alert %></p>
-        <% end %>
     <div class="container">
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
@@ -159,14 +158,13 @@
             <div class="payment-header clearfix">
               <h5 class="heading mt-0">登録情報</h5>
             </div>
-            <%= form_for(@user) do |f|%>
+            <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f|%>
               <div class="payment-content">
                 <div class="payment-traveller mb-0">
                   <div class="form-horizontal">
                     <div class="form-group gap-20">
                       <label class="col-sm-4 col-md-4 control-label">ニックネーム:</label>
                       <div class="col-sm-8 col-md-6">
-                        <!-- <input type="text" class="form-control" value="#{@user.last_name}"> -->
                         <%= f.text_field :username, class:"form-control", value:"#{@user.username}" %>
                       </div>
                     </div>
@@ -176,7 +174,6 @@
                       <label class="col-sm-4 col-md-4 control-label">メールアドレス:</label>
                       <div class="col-sm-8 col-md-6">
                         <%= f.email_field :email, class:"form-control", value:"#{@user.email}" %>
-                        <!-- <input type="email" class="form-control" value="jeorge_sekiya@hoge.com"> -->
                       </div>
                     </div>
                   </div>
@@ -184,8 +181,7 @@
                     <div class="form-group gap-20">
                       <label class="col-sm-4 col-md-4 control-label">現在のパスワード:</label>
                       <div class="col-sm-8 col-md-6">
-                        <%= f.password_field :password, class:"form-control" %>
-                        <!-- <input type="password" class="form-control" value=""> -->
+                        <%= f.password_field :current_password, class:"form-control", placeholder: "必ず入力してください" %>
                       </div>
                     </div>
                   </div>
@@ -193,14 +189,20 @@
                     <div class="form-group gap-20">
                       <label class="col-sm-4 col-md-4 control-label">新しいパスワード:</label>
                       <div class="col-sm-8 col-md-6">
-                        <!-- <input type="password" class="form-control" value=""> -->
-                        <%= f.password_field :password, class:"form-control" %>
+                        <%= f.password_field :password,:autocomplete => "off", class:"form-control", placeholder: "パスワードを変更しない場合は記入しないでください",autocomplete: "off" %>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="form-horizontal">
+                    <div class="form-group gap-20">
+                      <label class="col-sm-4 col-md-4 control-label">新しいパスワード確認:</label>
+                      <div class="col-sm-8 col-md-6">
+                        <%= f.password_field :password_confirmation, class:"form-control", placeholder: "パスワードを変更しない場合は記入しないでください",autocomplete: "off" %>
                       </div>
                     </div>
                   </div>
                 </div>
                 <div class="text-center">
-                  <!-- <button class="btn btn-primary btn-sm btn-inverse">登録情報を更新</button> -->
                   <%= f.submit "登録情報を更新", class:"btn btn-primary btn-sm btn-inverse" %>
                 </div>
               </div>
