--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
   <% elsif alert %>
     <p class="alert alert-error"><%= alert %></p>
   <% end %>
-  <div class="page-title" style="background-image:url('/assets/my_room.jpeg');">
+  <div class="page-title" style="background-image:url(<%= asset_path('my_room.jpeg')%>);">
     <div class="container">
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
@@ -50,11 +50,6 @@
         <div class="row">
           <div class="col-sm-8 col-md-9">
             <div class="confirmation-wrapper">
-  <!--             <div class="clearfix mb-20">
-                <div class="col-xs-8 col-md-4 pl-0">
-                  <img src="/assets/books/book1.png" alt="">
-                </div>
-              </div> -->
               <div class="confirmation-content">
                 <div class="section-title text-left">
                   <h4>登録情報</h4>
