--- a/app/views/users/selled/index.html.erb
+++ b/app/views/users/selled/index.html.erb
@@ -1,4 +1,4 @@
-<div class="page-title detail-page-title" style="background-image:url(<%= asset_path('books_on_desk2.jpg')%>);">
+<div class="page-title detail-page-title" style="background-image:url('/images/books_on_desk2.jpg');">
   <div class="container">
     <div class="flex-row">
       <div class="flex-column flex-md-8 flex-sm-12">
