--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,7 +2,7 @@
   <!-- start Main Wrapper -->
   <div class="main-wrapper scrollspy-container">
     <!-- start end Page title -->
-    <div class="page-title detail-page-title" style="background-image:url(<%= asset_path('books_on_desk2.jpg')%>);">
+    <div class="page-title detail-page-title" style="background-image:url('/images/books_on_desk2.jpg');">
       <div class="container">
         <div class="flex-row">
           <div class="flex-column flex-md-8 flex-sm-12">
