--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -180,7 +180,7 @@
   <!-- start Main Wrapper -->
   <div class="main-wrapper">
     <!-- start hero-header with windows height -->
-    <div class="hero" style="background-image:url(<%= asset_path('books.jpeg') %>);">
+    <div class="hero" style="background-image:url('/images/books.jpeg');">
       <div class="container">
         <div class="row">
           <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
@@ -273,7 +273,7 @@
           </div>
         </div>
         <div class="GridLex-col-6_sm-12 image-bg">
-          <div class="image-bg" style="background-image:url(<%= asset_path('books_on_desk2.jpg') %>);"></div>
+          <div class="image-bg" style="background-image:url('/images/books_on_desk2.jpg');"></div>
         </div>
       </div>
     </section>
