--- a/app/views/books/search/index.html
+++ b/app/views/books/search/index.html
@@ -3,7 +3,7 @@
 <!-- start Main Wrapper -->
 <div class="main-wrapper">
   <!-- start end Page title -->
-  <div class="page-title" style="background-image:url(<%= asset_path('books_on_desk2.jpg')%>);">
+  <div class="page-title" style="background-image:url('/images/books_on_desk2.jpg');">
     <div class="container">
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
