--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -8,7 +8,7 @@
     <p class="alert alert-error"><%= alert %></p>
   <% end %>
   <!-- start end Page title -->
-  <div class="page-title" style="background-image:url(<%= asset_path('my_room.jpeg')%>);">
+  <div class="page-title" style="background-image:url('/images/my_room.jpeg');">
     <div class="container">
       <div class="row">
         <div class="col-sm-10 col-sm-offset-1 col-md-6 col-md-offset-3">
