change css to sass

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -5,11 +5,12 @@
 @import "./style.scss";
 @import "./component.scss";
 @import "./animate.scss";
-@import "./icons/ionicons/css/ionicons.css";
-@import "./icons/font-awesome/css/font-awesome.css";
-@import "./icons/pe-icon-7-stroke/css/pe-icon-7-stroke.css";
-@import "./icons/simple-line-icons/css/simple-line-icons.css";
-@import "./icons/themify-icons/themify-icons.css";
-@import "./icons/rivolicons/style.css";
+@import "./icons/ionicons/css/ionicons.scss";
+@import "./icons/font-awesome/css/font-awesome.scss";
+@import "./icons/pe-icon-7-stroke/css/pe-icon-7-stroke.scss";
+@import "./icons/simple-line-icons/css/simple-line-icons.scss";
+@import "./icons/themify-icons/themify-icons.scss";
+@import "./icons/rivolicons/style.scss";
 @import "./custom.scss";
 @import "./font-awesome.scss";
+@import "font-awesome";
