--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>TechBook</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
+  <!-- <link rel="stylesheet" href="font-awesome/css/font-awesome.min.css"> -->
   <%= csrf_meta_tags %>
 </head>
 <body>
