--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -182,7 +182,7 @@
       <div class="container">
         <div class="row">
           <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2">
-            <h1 class="hero-title">技術書は、<br>次の世代のエンジニアへ。</h1>
+            <h1 class="hero-title">読み終わった技術書は、<br>次の世代のエンジニアへ。</h1>
             <p class="lead">エンジニアのための書籍シェアリングサービス</p>
           </div>
         </div>
