--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,6 +2,11 @@
   <div class="clear"></div>
   <!-- start Main Wrapper -->
   <div class="main-wrapper scrollspy-container">
+    <% if notice %>
+      <p class="alert alert-notice"><%= notice %></p>
+    <% elsif alert %>
+      <p class="alert alert-error"><%= alert %></p>
+    <% end %>
     <!-- start end Page title -->
     <div class="page-title detail-page-title" style="background-image:url('/images/books_on_desk2.jpg');">
       <div class="container">
