--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -13,7 +13,8 @@
         </div>
       </div>
       <div class="content clearfix">
-        <h5><%= book.title %></h5>
+        <!-- <h5><%= book.title %></h5> -->
+        <h5><%= truncate(book.title, :length => 25, :omssion => "...") %></h5>
         <div class="absolute-in-content">
           <% if !(book.order.present?) %>
             <% if book.likes_count != 0 %>
