accept-booking-validation

--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -106,7 +106,7 @@
             </div>
             <div class="row mt-20 clearfix">
               <div class="col-sm-12 col-md-12">
-                <%= f.submit "注文を確定する", class:"btn btn-primary" %>
+                <%= f.submit "注文を確定する", class:"btn btn-primary", id:"submit" %>
               </div>
             </div>
           </div>
