--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -126,10 +126,10 @@
                           <p>※相手にとって不快なコメントは避けましょう。利用制限や退会処分となることがあります。</p>
                           <div class="row">
                             <div class="form-group col-md-10">
-                              <%= f.text_area :text, class: "form-control", rows: "2", cols: "50", placeholder: "コメント" %>
+                              <%= f.text_area :text, class: "form-control", rows: "2", cols: "50", placeholder: "コメント", required:"true", id:"comment_text" %>
                             </div>
                             <div class="form-group col-md-2">
-                              <%= f.submit "送信", :class=>"button btn btn-primary" %>
+                              <%= f.submit "送信", :class=>"button btn", id:"submit" %>
                             </div>
                           </div>
                         <% end %>
