--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -211,3 +211,23 @@
 .sell-form{
   display:inline-block;
 }
+.btn-address{
+  opacity: 0.7;
+}
+.sell_book{
+  width:100px;
+}
+.clearfix:after {
+  content: " ";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+.title-left{
+  float:left;
+}
+.title-right{
+  float:right;
+  width:85%;
+}
