--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -231,3 +231,13 @@
   float:right;
   width:85%;
 }
+.shipping-address{
+  margin-top:10px;
+  padding:10px;
+  color:white;
+  background-color:rgba(19, 183, 136, 0.8);
+  border-color: $main_color;
+}
+.shipping-address-color{
+  color:white;
+}
