--- a/app/views/books/search/index.html
+++ b/app/views/books/search/index.html
@@ -1,4 +1,3 @@
-
 <div class="clear"></div>
 <!-- start Main Wrapper -->
 <div class="main-wrapper">
@@ -17,14 +16,14 @@
     <div class="container">
       <ol class="breadcrumb-list booking-step">
         <li><%= link_to "Home", root_path %></li>
-        <% if params[:category].present? %>
-          <% if params[:word].present? %>
+        <% if params[:category] %>
+          <% if params[:word] %>
             <li><span>カテゴリ：<%= params[:category] %>,  キーワード：<%= params[:word] %></span></li>
           <% else %>
             <li><span>カテゴリ: <%= params[:category] %></span></li>
           <% end %>
         <% else %>
-          <% if params[:word].present? %>
+          <% if params[:word] %>
             <li><span>キーワード: <%= params[:word] %></span></li>
           <% end %>
         <% end %>
