--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -2,11 +2,7 @@
 <!-- start Main Wrapper -->
 <div class="main-wrapper scrollspy-container">
   <!-- start end Page title -->
-  <% if notice %>
-    <p class="alert alert-notice"><%= notice %></p>
-  <% elsif alert %>
-    <p class="alert alert-error"><%= alert %></p>
-  <% end %>
+  <%= render partial:"layouts/flash" %>
   <div class="page-title" style="background-image:url('/images/my_room.jpeg');">
     <div class="container">
       <div class="row">
