--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -35,7 +35,9 @@
     <div class="GridLex-gap-30-wrappper package-grid-item-wrapper">
       <div class="GridLex-grid-noGutter-equalHeight">
         <% @books.each do |book| %>
-          <%= render partial:"books/book", locals:{book: book} %>
+          <div class="GridLex-col-3_sm-4_xs-12 mb-30">
+            <%= render partial:"books/book", locals:{book: book} %>
+          </div>
         <% end %>
       </div>
     </div>
