delete-unnessesary-code

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,4 +1,3 @@
-
 <div class="clear"></div>
 <!-- start Main Wrapper -->
 <div class="main-wrapper">
@@ -8,7 +7,7 @@
       <ol class="breadcrumb-list booking-step">
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "詳細ページ", book_path(@book) %></li>
-        <li><%= link_to "購入手続き", new_book_order_path(@book) %></li>
+        <li><span>購入手続き</span></li>
         <li><span>完了画面</span></li>
       </ol>
     </div>
